--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,9 @@
 import Page from "../components/Page.astro";
 ---
 
-<Page title="FIXME Portfolio">
+<Page title="Page of Bran">
   <h1>
-    FIXME Portfolio
+    Big Bran's portfolio
   </h1>
   <h2>Project Menu</h2>
   <nav>
