--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,5 +18,8 @@ import Page from "../components/Page.astro";
     </ul>
   </nav>
   <h2>About Me</h2>
-  <p>All About me...</p>
+  <p>Hello to the ones reading this, my name is Brandon Im 16 years old currently. I play volleyball, football, and indoor track for sports. I enjoy also doing a lot of physical activites such as going to the gym or just skateboarding. I have 
+  2 birds and a sister. I also enjoy hanging out with my friends, playing guitar, playing video games and working at my job at dunkins. i have plans to go to MIT which will be hard but I still have high ambitions but i also have other schools in mind like UMASS Amherst, Umass lowell
+  ,Boston University, Tufts or any other good engineering college since i dream about becoming a chemichal engineer or a mechanical engineer and i also have an interist in Plastics and Aerospace. I have high hopes for the future and what it brings me and i am willing to put as much work as i can to achieve all i want.
+  When it comes to my achievements im greedy because i want it all.  </p>
 </Page>
