--- a/src/components/Page.astro
+++ b/src/components/Page.astro
@@ -12,12 +12,18 @@ import "../scripts/main.js";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initialScale=1.0" />
     <script src="../scripts/main.js"></script>
+    <script>
+      import "../scripts/browser.js";
+    </script>
     <title>
       {title}
     </title>
+    
     <slot name="head" />
   </head>
   <body class="container">
     <slot />
+    <canvas class="background"></canvas>
+
   </body>
 </html>
