things that i did

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,26 @@ import Page from "../components/Page.astro";
   <h1 data-aos="fade-in">Big Bran's portfolio!</h1>
   <h2>Project Menu</h2>
   <nav>
+  <nav>
+    <ul>
+      <li>
+        <a href="./projects/binary-search/"> 
+          Binary Search Project 
+        </a>
+      </li>
+      <!-- More projects to come soon! -->
+    </ul>
+  </nav>
+   </nav>
+    <ul>
+      <li>
+        <a href="./projects/binary-search/"> 
+          Binary Search Project 
+        </a>
+      </li>
+      <!-- More projects to come soon! -->
+    </ul>
+  </nav>
     <ul>
       <li>
         <a href="./projects/binary-search/"> 
@@ -25,3 +45,5 @@ import Page from "../components/Page.astro";
 <main class="container">
   <!-- Your content here -->
 </main>
+
+<div id="particles-js" style="width: 100%; height: 100vh;"></div>
