SAVING FOR IMAGE AND URL LINK

--- a/src/components/Page.astro
+++ b/src/components/Page.astro
@@ -24,6 +24,7 @@ import "../scripts/main.js";
   <body class="container">
     <slot />
     <canvas class="background"></canvas>
+<img src="public/images/pexels-felixmittermeier-956999.jpg" alt="Description of Image">
 
   </body>
 </html>
