--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,7 +5,7 @@ body {
 }
 html, body { height: 100% }
 
-
+<img src="public/images/pexels-felixmittermeier-956999.jpg" alt="Description of Image"> 
 
 
 .background {
