CHANGING FOR URL LINK

--- a/src/components/Page.astro
+++ b/src/components/Page.astro
@@ -21,10 +21,10 @@ import "../scripts/main.js";
     
     <slot name="head" />
   </head>
-  <body class="container">
+  <body class="container" data-theme="dark">
     <slot />
     <canvas class="background"></canvas>
-<img src="public/images/pexels-felixmittermeier-956999.jpg" alt="Description of Image">
+
 
   </body>
 </html>
