--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Page from "../components/Page.astro";
    </nav>
     <ul>
       <li>
-        <a href="./projects/binary-search/"> 
+        <a href="./projects/random-proj/"> 
           Binary Search Project 
         </a>
       </li>
