background fix and text changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,47 +3,46 @@ import Page from "../components/Page.astro";
 ---
 
 <Page title="Page of Bran">
-  
   <h1 data-aos="fade-in">Big Bran's portfolio!</h1>
   <h2>Project Menu</h2>
   <nav>
-  <nav>
-    <ul>
-      <li>
-        <a href="./projects/binary-search/"> 
-          Binary Search Project 
-        </a>
-      </li>
-      <!-- More projects to come soon! -->
-    </ul>
+    <nav>
+      <ul>
+        <li>Project List</li>
+      </ul>
+    </nav>
   </nav>
-   </nav>
-    <ul>
-      <li>
-        <a href="./projects/random-proj/"> 
-          Binary Search Project 
-        </a>
-      </li>
-      <!-- More projects to come soon! -->
-    </ul>
-  </nav>
-    <ul>
-      <li>
-        <a href="./projects/binary-search/"> 
-          Binary Search Project 
-        </a>
-      </li>
-      <!-- More projects to come soon! -->
-    </ul>
-  </nav>
-  <h2>About Me</h2>
-  <p>Hello to the ones reading this, my name is Brandon Im 16 years old currently. I play volleyball, football, and indoor track for sports. I enjoy also doing a lot of physical activites such as going to the gym or just skateboarding. I have 
-  2 birds and a sister. I also enjoy hanging out with my friends, playing guitar, playing video games and working at my job at Dunkins. I have plans to go to MIT which will be hard but I still have high ambitions but i also have other schools in mind like UMASS Amherst, Umass lowell
-  ,Boston University, Tufts or any other good engineering college since i dream about becoming a Chemical Engineer or a Mechanical engineer and I also have an interist in Plastics and Aerospace. I have high hopes for the future and what it brings me and I am willing to put as much work as I can to achieve all I want.
-  When it comes to my achievements im greedy because I want it all.  </p>
 </Page>
+<ul>
+  <li>
+    <a href="./projects/binary-search/"> Binary Search Project </a>
+  </li>
+  <!-- More projects to come soon! -->
+</ul>
+
+<ul>
+  <li>
+    <a href="./projects/random-proj/"> Portfolio project </a>
+  </li>
+  <!-- More projects to come soon! -->
+</ul>
+
+<h2>About Me</h2>
+<p>
+  Hello to the ones reading this, my name is Brandon Im 16 years old currently.
+  I play volleyball, football, and indoor track for sports. I enjoy also doing a
+  lot of physical activites such as going to the gym or just skateboarding. I
+  have 2 birds and a sister. I also enjoy hanging out with my friends, playing
+  guitar, playing video games and working at my job at Dunkins. I have plans to
+  go to MIT which will be hard but I still have high ambitions but i also have
+  other schools in mind like UMASS Amherst, Umass lowell ,Boston University,
+  Tufts or any other good engineering college since i dream about becoming a
+  Chemical Engineer or a Mechanical engineer and I also have an interist in
+  Plastics and Aerospace. I have high hopes for the future and what it brings me
+  and I am willing to put as much work as I can to achieve all I want. When it
+  comes to my achievements im greedy because I want it all.
+</p>
+
 <main class="container">
   <!-- Your content here -->
 </main>
-
-<div id="particles-js" style="width: 100%; height: 100vh;"></div>
