--- a/src/pages/projects/random-proj.astro
+++ b/src/pages/projects/random-proj.astro
@@ -3,10 +3,10 @@ import Project from "../../components/Project.astro"
 ---
 
 <Project
-  title="Personality Quiz"
-  assignment="Create a program built on the concept of binary search"
+  title="Portfolio"
+  assignment="Create a website that has a interesting library"
 >
-  <p>My project was super fun, I worked hard on it!</p>
+  <p>My project was pretty interesting too work on and i spent a good chunk of time working on it!</>
   <!-- Replace src="" on iframe with address of your published
    project :-) -->
   <h1>test</h1>
