changes as previous

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,3 +46,6 @@ import Page from "../components/Page.astro";
 <main class="container">
   <!-- Your content here -->
 </main>
+<a href="./components/Credits/"> Credits and copyright </a>
+
+<!-- More projects to come soon! -->
