--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Page from "../components/Page.astro";
 
 <h2>About Me</h2>
 <p>
-  Hello to the ones reading this, my name is Brandon Im 16 years old currently.
+  Hello to the ones reading this, my name is Brandon I'm 16 years old currently.
   I play volleyball, football, and indoor track for sports. I enjoy also doing a
   lot of physical activites such as going to the gym or just skateboarding. I
   have 2 birds and a sister. I also enjoy hanging out with my friends, playing
@@ -46,6 +46,6 @@ import Page from "../components/Page.astro";
 <main class="container">
   <!-- Your content here -->
 </main>
-<a href="./components/Credits/"> Credits and copyright </a>
+<a href="./projects/credits/"> Credits and copyright </a>
 
 <!-- More projects to come soon! -->
