--- a/src/pages/projects/random-proj.astro
+++ b/src/pages/projects/random-proj.astro
@@ -1,14 +1,16 @@
 ---
-import Project from "../../components/Project.astro"
+import Project from "../../components/Project.astro";
 ---
 
 <Project
   title="Portfolio"
   assignment="Create a website that has a interesting library"
 >
-  <p>My project was pretty interesting too work on and i spent a good chunk of time working on it!</>
+  <p>
+    My project was pretty interesting too work on and i spent a good chunk of
+    time working on it!
+  </p>
   <!-- Replace src="" on iframe with address of your published
    project :-) -->
   <h1>test</h1>
-
 </Project>
