--- a/src/pages/projects/random-proj.astro
+++ b/src/pages/projects/random-proj.astro
@@ -12,5 +12,9 @@ import Project from "../../components/Project.astro";
   </p>
   <!-- Replace src="" on iframe with address of your published
    project :-) -->
-  <h1>test</h1>
+  <iframe
+    src="https://iacs-cs.github.io/apcsp-portfolio-MrDonaldGlov/"
+    title="Personality Quiz"
+    width="100%"
+    height="800px"></iframe>
 </Project>
