--- a/src/components/Credits.astro
+++ b/src/components/Credits.astro
@@ -17,11 +17,10 @@ let { title, assignment } = Astro.props;
     <article>
       <p>
         Credits and thanks too Mr hinkle for the help on instalations and
-        Achnowldegements for PicoCSS for improved text,AOS for fade
-        in's, particlesjs for background particles and felix mitter for the
-        image.
+        Achnowldegements for PicoCSS for improved text,AOS for fade in's,
+        particlesjs for background particles and felix mitter for the image.
       </p>
-      <p>Big Bran's Portfolio by Brandon Dias is marked with CC0 1.0</p>
+      <p>Page of Bran by Tron is marked with CC0 1.0</p>
       <hr />
       <slot />
     </article>
