--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,8 +39,7 @@ import Page from "../components/Page.astro";
   Tufts or any other good engineering college since i dream about becoming a
   Chemical Engineer or a Mechanical engineer and I also have an interist in
   Plastics and Aerospace. I have high hopes for the future and what it brings me
-  and I am willing to put as much work as I can to achieve all I want. When it
-  comes to my achievements im greedy because I want it all.
+  and I am willing to put as much work as I can to achieve all I want.
 </p>
 
 <main class="container">
