--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,9 @@ import Page from "../components/Page.astro";
   </li>
   <!-- More projects to come soon! -->
 </ul>
+<li>
+  <a href="./projects/turtle/"> Turtle project </a>
+</li>
 
 <h2>About Me</h2>
 <p>
