--- a/src/pages/projects/random-proj.astro
+++ b/src/pages/projects/random-proj.astro
@@ -4,7 +4,7 @@ import Project from "../../components/Project.astro";
 
 <Project
   title="Portfolio"
-  assignment="Create a website that has a interesting library"
+  assignment="Create a drawing with a changing variable"
 >
   <p>
     My project was pretty interesting too work on and i spent a good chunk of
@@ -14,7 +14,7 @@ import Project from "../../components/Project.astro";
    project :-) -->
   <iframe
     src="https://iacs-cs.github.io/apcsp-portfolio-MrDonaldGlov/"
-    title="Personality Quiz"
+    title="Turtle Drawing"
     width="100%"
     height="800px"></iframe>
 </Project>
