New project and fixed lists on index astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,21 +14,25 @@ import Page from "../components/Page.astro";
   </nav>
 </Page>
 <ul>
+  <!-- start project list -->
   <li>
     <a href="./projects/binary-search/"> Binary Search Project </a>
   </li>
   <!-- More projects to come soon! -->
-</ul>
-
-<ul>
   <li>
     <a href="./projects/random-proj/"> Portfolio project </a>
   </li>
   <!-- More projects to come soon! -->
+
+  <li>
+    <a href="./projects/turtle/"> Turtle project </a>
+  </li>
+
+  <li>
+    <a href="./projects/Mash/"> MASH Project </a>
+  </li>
 </ul>
-<li>
-  <a href="./projects/turtle/"> Turtle project </a>
-</li>
+<!-- ends project list -->
 
 <h2>About Me</h2>
 <p>
