--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,18 +18,21 @@ import Page from "../components/Page.astro";
   <li>
     <a href="./projects/binary-search/"> Binary Search Project </a>
   </li>
-  <!-- More projects to come soon! -->
+
   <li>
     <a href="./projects/random-proj/"> Portfolio project </a>
   </li>
-  <!-- More projects to come soon! -->
 
   <li>
-    <a href="./projects/turtle/"> Turtle project </a>
+    <a href="./projects/turtle/"> Turtle Project </a>
   </li>
 
   <li>
     <a href="./projects/Mash/"> MASH Project </a>
+  </li>
+
+  <li>
+    <a href="./projects/Image/"> Image Changer Project </a>
   </li>
 </ul>
 <!-- ends project list -->
