--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,10 @@ import Page from "../components/Page.astro";
   <li>
     <a href="./projects/Image/"> Image Changer Project </a>
   </li>
+
+  <li>
+    <a href="./projects/Disease/"> Disease Modeling Project </a>
+  </li>
 </ul>
 <!-- ends project list -->
 
